# automl-gateway

./: .env.example  Dockerfile  README.md  pyproject.toml
app/: config.py  main.py  proxy.py  workflows.py
tests/: conftest.py  test_gateway.py
